# AML_SMPC

./: .gitignore  2timeline.md  AML_SMPC_REQUIRED_TOOLS.txt  aml_system_bootstrap.sh  automated scripts  dev_summary.md  phase-r0-bundle.md  phase-r1-frontend-bundle.md  product_scope.md  refined-remaining-development-timeline.md  seeding db scripts_information  test_7.1  timeline.md
aml-system/: .dockerignore  .env.example  .gitignore  Dockerfile.render-fullstack  Makefile  requirements.txt
aml-system/docs/architecture/: container-diagram.md  context-diagram.md
aml-system/docs/auth/: AUTH_8_DEMO_CREDENTIALS_RAW.txt  AUTH_8_RBAC_VALIDATION_RESULTS.md  auth8-rbac-access-matrix.md
aml-system/docs/compliance/: audit-traceability.md  fatf-mapping.md  gdpr-controls.md
aml-system/docs/defense/: EXAMINER_DEFENSE_NOTES.md  FINAL_DEMO_TALK_TRACK.md  FINAL_EXAMINER_QA_CHEATSHEET.md  FINAL_PRESENTATION_STORY.md
aml-system/docs/demo/: AML_SMPC_Application_Run_and_Research_Objectives_Guide.md  APPLICATION_RUN_AND_RESEARCH_OBJECTIVES_GUIDE.md  APPLICATION_RUN_AND_RESEARCH_OBJECTIVES_GUIDE.md.save  AUTH_8_RBAC_FRONTEND_DEMO_CHECKLIST.md  BANK_RBAC_SUSPICION_CASE_WORKFLOW.md  DEMO_1_FINAL_OBJECTIVE_VALIDATION_RESULTS.md  FE_SMPC_1_FRONTEND_THREE_BANK_SMPC_PAGE.md  FINAL_PRESENTATION_BROWSER_TAB_PLAN.md  FINAL_PRESENTATION_REHEARSAL_GUIDE.md  FINAL_PROJECT_OBJECTIVE_VALIDATION_MATRIX.md  FINAL_PROJECT_PRESENTATION_RUNBOOK.md  PARTNER_BANK_IDENTITY_MODEL.md  README-phase8-draft.md  REGULATOR_ANOMALY_CASE_FEEDBACK.md  SUSPICIOUS_TRANSACTION_RULE_ENGINE.md  THREE_BANK_SMPC_COLLABORATION_MODEL.md  THREE_BANK_SMPC_DEMO_SCRIPT.md  demo-environment-baseline.md  demo-script.md  final-presentation-outline.md  localhost-presentation-run-guide.md  regulator-dashboard-demo.md  sequence-transaction-to-proof.md
aml-system/docs/frontend/: api-contract.md  frontend-build-plan.md  frontend-demo-guide.md  frontend-screenshot-checklist.md
aml-system/docs/presentation/: frontend-demo-narrative.md
aml-system/env/: pyvenv.cfg
aml-system/services/encryption-service/api/: Cargo.toml  Dockerfile
aml-system/services/encryption-service/api/src/: main.rs  pseudonymize.rs  routes.rs  smpc_client.rs
aml-system/services/he-orchestrator/seal-core/: CMakeLists.txt
aml-system/services/he-orchestrator/seal-core/include/: seal_bridge.hpp
aml-system/services/he-orchestrator/seal-core/src/: context.cpp  decrypt.cpp  encrypt.cpp  sum.cpp
aml-system/services/regulator-api/backend/: Cargo.toml  Dockerfile
aml-system/services/regulator-api/backend/src/: anomaly_cases.rs  auth.rs  main.rs  proofs.rs  routes.rs  transactions.rs
aml-system/services/zk-prover/prover/: Cargo.toml  Dockerfile
aml-system/services/zk-prover/prover/src/: prove.rs  routes.rs
aml-system/tests/: README.md  TEST_ORDER.md
aml-system/timelines/: phase7-populated-bundle.md  phase7-testing-plan.md  phase7_timeline.md
(+371 files in other folders)
